// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components|PanelActionBar 3 items 1`] = `
.emotion-12 {
  position: absolute;
  bottom: 0;
  right: 0;
  max-width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  list-style: none;
  margin: 0;
  padding: 0;
  border-top: 1px solid rgba(0,0,0,0.1);
  border-left: 1px solid rgba(0,0,0,0.1);
  background: rgba(255,255,255,1);
  border-radius: 4px 0 0 0;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  list-style: none;
  padding: 0;
  height: 26px;
  font-size: 11px;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
  text-transform: uppercase;
  border-left: 0 none;
}

.emotion-0 {
  border: 0 none;
  display: block;
  background: none;
  padding: 0 10px;
  text-transform: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  font-size: inherit;
  color: inherit;
  border-top: 2px solid transparent;
  border-bottom: 2px solid transparent;
}

.emotion-0:focus {
  border-bottom: 2px solid #9fdaff;
  outline: 0 none;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  list-style: none;
  padding: 0;
  height: 26px;
  font-size: 11px;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
  text-transform: uppercase;
  border-left: 1px solid rgba(0,0,0,0.1);
}

<ul
  class="emotion-12 emotion-13"
>
  <li
    class="emotion-2 emotion-3"
  >
    <button
      class="emotion-0 emotion-1"
    >
      Nr1
    </button>
  </li>
  <li
    class="emotion-6 emotion-3"
  >
    <button
      class="emotion-0 emotion-1"
    >
      Nr2
    </button>
  </li>
  <li
    class="emotion-6 emotion-3"
  >
    <button
      class="emotion-0 emotion-1"
    >
      Nr3
    </button>
  </li>
</ul>
`;

exports[`Storyshots Components|PanelActionBar single item 1`] = `
.emotion-4 {
  position: absolute;
  bottom: 0;
  right: 0;
  max-width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  list-style: none;
  margin: 0;
  padding: 0;
  border-top: 1px solid rgba(0,0,0,0.1);
  border-left: 1px solid rgba(0,0,0,0.1);
  background: rgba(255,255,255,1);
  border-radius: 4px 0 0 0;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  list-style: none;
  padding: 0;
  height: 26px;
  font-size: 11px;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
  text-transform: uppercase;
  border-left: 0 none;
}

.emotion-0 {
  border: 0 none;
  display: block;
  background: none;
  padding: 0 10px;
  text-transform: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  font-size: inherit;
  color: inherit;
  border-top: 2px solid transparent;
  border-bottom: 2px solid transparent;
}

.emotion-0:focus {
  border-bottom: 2px solid #9fdaff;
  outline: 0 none;
}

<ul
  class="emotion-4 emotion-5"
>
  <li
    class="emotion-2 emotion-3"
  >
    <button
      class="emotion-0 emotion-1"
    >
      CLEAR
    </button>
  </li>
</ul>
`;
